tests/NormalTests/paczka1/fuzzy1/23147559.err
Error in line 8: 5QW1 S700 52,2
Error in line 10: A817 S319 47,64
Error in line 15: F6ZerAxTP S319 4,2
Error in line 20: 5ON7Qa S319 78,2
Error in line 25: 5ON7Qa A448 56,7
Error in line 27: 5ON7Qa S319 69,6
Error in line 21: A817 S319 149,8
